# project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  create-project.bat  fix_files.py  project-manager.bat  pyproject.toml  requirements.txt  run_deep_research.py  vite.config.ts
.cursor/rules/: ai_integration.mdc  api_integration.mdc  architecture_workflow.mdc  coding-pattern-preferences.mdc  cursor_rules.mdc  data-fetching.mdc  dependencies.mdc  development_consistency.mdc  guidelines-for-writing-postgres-sql.mdc  mcp.mdc  project-stack-and-management.mdc  reference_meta.mdc  task_management_cli.mdc  testing_quality.mdc  tests.mdc  ui_data.mdc  workflow-preferences.mdc
scripts/: dev.py  setup_api_keys.py  setup_env.py  validate_consistency.py
src/: __init__.py  main.py
src/ai/: research.py
src/core/: __init__.py  core_types.py  env_manager.py  module.py
src/modules/: __init__.py  file_organizer.py  project_creator.py
