[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-dev-system"
version = "2.0.0"
description = "Cursor Development System - Project Scaffolding Tool"
authors = [
    {name = "Cursor AI", email = "dev@cursor.sh"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools"
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.5.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.10"
]

[project.scripts]
cursor-dev = "cursor_dev_system.main:main"

[project.urls]
Homepage = "https://github.com/cursor-ai/cursor-dev-system"
Documentation = "https://cursor-ai.github.io/cursor-dev-system"
Repository = "https://github.com/cursor-ai/cursor-dev-system.git"
Issues = "https://github.com/cursor-ai/cursor-dev-system/issues"

[tool.setuptools]
packages = ["cursor_dev_system"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]
